--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {
     "request": "^2.81.0",
